# iec104-python

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
c104/: __init__.py  __init__.pyi
depends/: lib60870.patch
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  index.rst  install.rst  migrate_v3.rst  objects.inv
docs/source/core/: client.rst  index.rst  server.rst  types.rst
docs/source/core/enums/: binarycounterquality.rst  commandprocessstate.rst  commandresponsestate.rst  commandtransmissionmode.rst  connectioninit.rst  connectionstate.rst  cs101causeofinitialization.rst  cs101freezeofcounterinterrogation.rst  cs101qualifierofcommand.rst  cs101qualifierofcounterinterrogation.rst  cs101qualifierofinterrogation.rst  debug.rst  doublepointvalue.rst  eventstate.rst  fieldset16.rst  iec608705typeid.rst  index.rst  informationtype.rst  outputcircuits.rst  quality.rst  responsestate.rst  startevents.rst  stepcommandvalue.rst  tlsciphersuite.rst  tlsversion.rst  unexpectedmessagecause.rst
docs/source/core/module/: callback.rst  gilawaremutex.rst  index.rst  scopedgilacquire.rst  scopedgilrelease.rst
docs/source/core/numbers/: byte32.rst  index.rst  limitedint16.rst  limitedint7.rst  limiteduint16.rst  limiteduint5.rst  limiteduint7.rst  normalizedfloat.rst
docs/source/core/object/: datapoint.rst  index.rst  information.rst  station.rst
docs/source/core/remote/: connection.rst  helper.rst  index.rst  transportsecurity.rst
docs/source/core/remote/message/: batch.rst  imessageinterface.rst  incomingmessage.rst  index.rst  outgoingmessage.rst  pointcommand.rst  pointmessage.rst
docs/source/python/: batch.rst  client.rst  connection.rst  functions.rst  incomingmessage.rst  index.rst  point.rst  protocolparameters.rst  server.rst  station.rst  transportsecurity.rst
docs/source/python/enum/: coi.rst  commandmode.rst  connectionstate.rst  cot.rst  data.rst  double.rst  eventstate.rst  frz.rst  index.rst  init.rst  qoc.rst  qoi.rst  responsestate.rst  rqt.rst  step.rst  tlscipher.rst  tlsversion.rst  type.rst  umc.rst
docs/source/python/enumset/: binarycounterquality.rst  debug.rst  fieldset16.rst  index.rst  outputcircuits.rst  packedsingle.rst  quality.rst  startevents.rst
docs/source/python/information/: binarycmd.rst  binarycounterinfo.rst  binaryinfo.rst  doublecmd.rst  doubleinfo.rst  index.rst  information.rst  normalizedcmd.rst  normalizedinfo.rst  protectioncircuitinfo.rst  protectioneventinfo.rst  protectionstartinfo.rst  scaledcmd.rst  scaledinfo.rst  shortcmd.rst  shortinfo.rst  singlecmd.rst  singleinfo.rst  statusandchange.rst  statusandchanged.rst  stepcmd.rst  stepinfo.rst
docs/source/python/message/: incomingmessage.rst
docs/source/python/number/: byte32.rst  index.rst  int16.rst  int7.rst  normalizedfloat.rst  uint16.rst  uint5.rst  uint7.rst
examples/: async_client.py  async_server.py  batch_server.py  dump_client.py  simple_client.py  simple_server.py  tls_client.py  tls_server.py
src/: Client.cpp  Client.h  ClientPy.cpp  Server.cpp  Server.h  ServerPy.cpp  bitflag.h  constants.h  debug.cpp  debug.h  enums.cpp  enums.h  main.cpp  main_client.cpp  main_server.cpp  numbers.h  python.cpp  types.cpp  types.h  variadic.h
src/module/: Callback.h  GilAwareMutex.h  ScopedGilAcquire.h  ScopedGilRelease.h  Tuple.h
src/object/: DataPoint.cpp  DataPoint.h  DataPointPy.cpp  DateTime.cpp  DateTime.h  DateTimePy.cpp  Information.cpp  Information.h  InformationPy.cpp  Station.cpp  Station.h  StationPy.cpp
src/object/information/: BinaryCmd.cpp  BinaryCmd.h  BinaryInfo.cpp  BinaryInfo.h  DoubleCmd.cpp  DoubleCmd.h  DoubleInfo.cpp  DoubleInfo.h  EquipmentProtectionEvent.cpp  EquipmentProtectionEvent.h  EquipmentProtectionOutputCircuitEvent.cpp  EquipmentProtectionOutputCircuitEvent.h  EquipmentProtectionStartEvents.cpp  EquipmentProtectionStartEvents.h  Generic.cpp  Generic.h  ICommand.cpp  ICommand.h  IInformation.cpp  IInformation.h  IntegratedTotalInfo.cpp  IntegratedTotalInfo.h  NormalizedCmd.cpp  NormalizedCmd.h  NormalizedInfo.cpp  NormalizedInfo.h  ScaledCmd.cpp  ScaledCmd.h  ScaledInfo.cpp  ScaledInfo.h  ShortCmd.cpp  ShortCmd.h  ShortInfo.cpp  ShortInfo.h  SingleCmd.cpp  SingleCmd.h  SingleInfo.cpp  SingleInfo.h  StatusWithChangeDetection.cpp  StatusWithChangeDetection.h  (+5 more)
src/package/c104/: __init__.py  __init__.pyi
src/remote/: Connection.cpp  Connection.h  ConnectionPy.cpp  FileClient.cpp  FileClient.h  Helper.cpp  Helper.h  Selection.cpp  Selection.h  TransportSecurity.cpp  TransportSecurity.h  TransportSecurityPy.cpp
src/remote/message/: Batch.cpp  Batch.h  BatchPy.cpp  IMessageInterface.h  IncomingMessage.cpp  IncomingMessage.h  IncomingMessagePy.cpp  InvalidMessageException.h  OutgoingMessage.cpp  OutgoingMessage.h  PointCommand.cpp  PointCommand.h  PointMessage.cpp  PointMessage.h
src/serial/: SerialMaster.cpp  SerialMaster.h
src/tasks/: Executor.cpp  Executor.h  Task.h
src/transformer/: Information.cpp  Information.h  Type.cpp  Type.h
tests/: client.py  client_reconnect.py  loop.py  main.cpp  server.py  server_passive.py  test.py  test_object_datapoint.cpp  test_object_datetime.cpp  test_object_information.cpp  test_object_station.cpp  test_originator.py  test_remote_message_batch.cpp  test_server_interrogation.cpp  test_variant_values.py  valgrind-python.supp
