[metadata]
name = c104
version = 2.0.0
long_description = file: README.md
long_description_content_type = text/markdown
description = A Python module to simulate SCADA and RTU communication over protocol 60870-5-104 to research ICT behavior in power grids.
author = Martin Unkel, Fraunhofer FIT
author_email = martin.unkel@fit.fraunhofer.de
url = https://github.com/fraunhofer-fit-dien/iec104-python
license = GPLv3

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

keywords =
    Python bindings
    scada
    rtu
    remote-terminal-unit
    mtu
    master-terminal-unit
    energy-management
    60870-5-104
    iec60870-5-104
    iec60870-5
    60870
    lib60870
    lib60870-C

project_urls =
    Documentation = https://iec104-python.readthedocs.io/latest/python/index.html
    Bug Tracker = https://github.com/Fraunhofer-FIT-DIEN/iec104-python/issues
    Changelog = https://github.com/Fraunhofer-FIT-DIEN/iec104-python/blob/main/CHANGELOG.md
    Source Code = https://github.com/Fraunhofer-FIT-DIEN/iec104-python

[options]
python_requires = >=3.7
zip_safe = False
